src/css/style.scss
/* ... */
a {
  text-decoration: none;
  transition: color $transition-time;
  color: $solarized-blue;
}
.night a {
  color: $solarized-blue-light;
}

#content {
  display: grid;
  grid-column-gap: 3%;
  // row-gap: 50px;
  grid-template-rows: 150px calc(100vh - 300px) 150px;
  grid-template-columns: auto minmax(200px, 300px) minmax(800px, 1000px) auto;
  grid-template-areas:
    "header header header header"
    ". nav content ."
    "footer footer footer footer";
  transition: color $transition-time;
}
@media (max-width: $medium-screen-break) {
  #content {
    grid-template-columns: 0 25% auto 0;
  }
}
@media (max-width: $small-screen-break) {
  #content {
    grid-template-columns: 10% auto 10%;
    grid-template-rows: 100px 10vh calc(90vh - 310px) 150px;
    grid-template-areas:
      "header header header"
      ". nav ."
      ". content ."
      "footer footer footer";
    row-gap: 20px;
  }
}
#content.day {
  color: $solarized-base02;
}
#content.night {
  color: $solarized-base2;
}

/*******/
/* Sky */
/*******/
#night-sky-container,
#day-sky-container {
  height: 100%;
  position: absolute;
  width: 100%;
  z-index: -1;
}
#night-sky-grid-container,
#day-sky-grid-container {
  display: grid;
  grid-template-rows: auto 100px;
  height: 100vh;
  width: 100%;
}
#day-sky {
  background: linear-gradient(
    0deg,
    $desert-sky-light 0,
    $desert-sky-lighter 50px,
    $desert-sky-lighter calc(100vh - 200px),
    $desert-sky-light 100%
  );
  display: grid;
  grid-row-start: 1;
  grid-row-end: 2;
  z-index: -1;
  transition: opacity $transition-time;
}
#night-sky {
  background: linear-gradient(
    0deg,
    $desert-sky-dark 0,
    $desert-sky-darker 50px,
    $desert-sky-darker calc(100vh - 200px),
    $desert-sky-dark 100%
  );
  display: grid;
  grid-row-start: 1;
  grid-row-end: 2;
  width: 100%;
  height: 100%;
  z-index: -1;
  transition: opacity $transition-time;
}
.stars {
  display: relative;
}
.star {
  display: inline-block;
  position: absolute;
  opacity: 75%;
}
@keyframes starsOn {
  0% {
    background-size: 0 0;
    opacity: 0%;
  }
  50% {
    background-size: 0 0;
    opacity: 0%;
  }
  100% {
    background-size: 100% 100%;
    opacity: 100%;
  }
}
@keyframes starsOff {
  from {
    background-size: 100% 100%;
  }
  to {
    background-size: 0 0;
  }
}
.day .star {
  animation-name: starsOff;
  animation-duration: $transition-time;
  background-repeat: no-repeat;
}
.night .star {
  animation-name: starsOn;
  animation-duration: calc($transition-time * 2);
  background-repeat: no-repeat;
}
#header-area .star {
  animation: none;
}
.night .star-turquoise {
  background: radial-gradient(
    circle,
    hsla(173, 80%, 70%, 100%) 0%,
    hsla(173, 80%, 100%, 0%) 75%
  );
  background-repeat: no-repeat;
  background-position: center;
}
.night .star-lavendar {
  background: radial-gradient(
    circle,
    hsla(272, 100%, 70%, 100%) 0%,
    hsla(272, 100%, 100%, 0%) 75%
  );
  background-repeat: no-repeat;
  background-position: center;
}
.night .star-pink {
  background: radial-gradient(
    circle,
    hsla(323, 64%, 70%, 100%) 0%,
    hsla(323, 64%, 100%, 0%) 75%
  );
  background-repeat: no-repeat;
  background-position: center;
}
.night .star-jasmine {
  background: radial-gradient(
    circle,
    hsla(49, 87%, 70%, 100%) 0%,
    hsla(49, 87%, 100%, 0%) 75%
  );
  background-repeat: no-repeat;
  background-position: center;
}

@keyframes sunmoonrise {
  from {
    top: 200;
    bottom: -40;
  }
  to {
    top: 10;
    bottom: 100;
  }
}
@keyframes sunmoonset {
  from {
    top: 10;
    bottom: 100;
  }
  to {
    top: 200;
    bottom: -40;
  }
}
#moon-large,
#sun-large {
  display: inline-block;
  position: absolute;
  top: 10;
  left: 450;
}
.night #moon-large {
  animation: sunmoonrise $transition-time;
}
.night #sun-large {
  animation: sunmoonset $transition-time;
}
.day #moon-large {
  animation: sunmoonset $transition-time;
}
.day #sun-large {
  animation: sunmoonrise $transition-time;
}

/**********/
/* Header */
/**********/

@keyframes neon2 {
  from {
    text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #fff, 0 0 40px #228dff,
      0 0 70px #228dff, 0 0 80px #228dff, 0 0 100px #228dff, 0 0 150px #228dff;
  }
  to {
    text-shadow: 0 0 5px #fff, 0 0 10px #fff, 0 0 15px #fff, 0 0 20px #228dff,
      0 0 35px #228dff, 0 0 40px #228dff, 0 0 50px #228dff, 0 0 75px #228dff;
  }
}

#header-area {
  grid-area: header;
  display: flex;
  font-family: "Montserrat", sans-serif;
  position: fixed;
  top: 0;
  width: 100%;
  height: 100px;
  padding-bottom: 0.5rem;
}
#header-content-container {
  display: grid;
  grid-column-gap: 3%;
  grid-template-columns: auto minmax(200px, 300px) minmax(800px, 1000px) auto;
  padding-top: 0.5rem;
  width: 100%;
}
@media (max-width: $medium-screen-break) {
  #header-content-container {
    grid-template-columns: 0 25% auto 0;
  }
}
@media (max-width: $small-screen-break) {
  #header-content-container {
    grid-template-columns: 13% auto 13%;
    grid-gap: 0;
  }
}

@keyframes neonOn {
  0% {
    text-shadow: none;
  }
  50% {
    text-shadow: none;
  }
  55% {
    text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #fff, 0 0 40px #228dff,
      0 0 70px #228dff, 0 0 80px #228dff, 0 0 100px #228dff, 0 0 150px #228dff;
  }
  60% {
    text-shadow: none;
  }
  65% {
    text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #fff, 0 0 40px #228dff,
      0 0 70px #228dff, 0 0 80px #228dff, 0 0 100px #228dff, 0 0 150px #228dff;
  }
  70% {
    text-shadow: none;
  }
  100% {
    text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #fff, 0 0 40px #228dff,
      0 0 70px #228dff, 0 0 80px #228dff, 0 0 100px #228dff, 0 0 150px #228dff;
  }
}
/* ... */

